cadastro de mae

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="src/lib/angular-material/angular-material.css" />
     <!-- endbower -->
+    <link rel="stylesheet" href="src/css/app.css" />
   </head>
   <body data-ng-controller="IndexController as vm">
 
@@ -75,4 +76,7 @@
   <script src="src/modules/user/user-create.controller.js"></script>
   <script src="src/app.module.js"></script>
   <script src="index.controller.js"></script>
+  <!-- MESSAGE MODULE -->
+  <script src="src/modules/message/message.module.js"></script>
+  <script src="src/modules/message/message.service.js"></script>
 </html>
