--- a/src/modules/user/user-create.html
+++ b/src/modules/user/user-create.html
@@ -13,13 +13,13 @@
     <form data-ng-submit="vm.save()" name="userForm">
       <div layout="row" layout-wrap>
         <div flex=40>
-          <input-text name="nome" is-required="true" model="vm.mae.nome" label="Nome" md-class="md-block"></input-text>
+          <input-text name="nome" is-required="true" data-model="vm.mae.nome" label="Nome" md-class="md-block"></input-text>
         </div>
         <div flex=60>
-          <input-text name="sobrenome" is-required="true" model="vm.mae.sobrenome" label="Sobrenome" md-class="md-block"></input-text>
+          <input-text name="sobrenome" is-required="true" data-model="vm.mae.sobrenome" label="Sobrenome" md-class="md-block"></input-text>
         </div>
         <div flex=100>
-          <input-email name="email" is-required="true" model="vm.mae.email" label="Seu email" md-class="md-block"></input-email>
+          <input-email name="email" is-required="true" data-model="vm.mae.email" label="Seu email" md-class="md-block"></input-email>
         </div>
         <div flex=60>
           <md-input-container class="md-block">
