Alteração do login.

--- a/src/modules/authentication/login.html
+++ b/src/modules/authentication/login.html
@@ -10,7 +10,7 @@
   </md-card-header>
   <md-card-content>
     
-    <form data-ng-submit="vm.login()" name="loginForm">
+    <form data-ng-submit="vm.login(vm.mae)" name="loginForm">
       <div layout="row" layout-wrap>
         <div flex=100>
           <input-email name="email" is-required="true" model="vm.mae.email" label="Seu email" md-class="md-block"></input-email>
