Inserindo manifest.json

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app="App">
   <head>
-    <title>Start</title>
+    <title>Mãe Cegonha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -82,4 +82,6 @@
   <!-- START -->
   <script src="src/app.module.js"></script>
   <script src="index.controller.js"></script>
+
+  <script src="manifest.json"></script>
 </html>
